syntax ="proto3";
package AddService;
service AdderCatalog{
  rpc AddItemToCatalog(Item) returns (Ok);
  rpc DeleteItemFromCatalog(Id) returns (Ok);
}
message Item {
  string name = 1;
  string type = 2;
  int32 amount = 3;
  float cost = 4;
}
message Id{
  int32 id =1;
}
message Ok{
  bool ok =1;
}