syntax = "proto3";
package service;
service Catalog {
  rpc GetItemsFromDB(Empty) returns(Response1);
  rpc AddItemToWishlist(Id_item) returns(Response2);
}
message Item {
  int32 id = 1;
  string name = 2;
  string type = 3;
  int32 amount = 4;
  float cost = 5;
}
message Empty{}
message Id_item{
  int32 id=1;
}
message Response1 {
  repeated Item items = 1;
  bool success = 2;
}

message Response2{
   bool ok = 1;
}